[workspace]
resolver = "2"

members = [ "increase_target_staked_ratio",
    "phase2",
    "phase3",
    "phase4",
    "phase5",
    "increase_target_staked_ratio"
]

default-members = [
    "phase2",
    "phase3",
    "phase4",
    "phase5",
    "increase_target_staked_ratio"
]

[workspace.package]
authors = ["Heliax AG <hello@heliax.dev>"]
edition = "2021"
license = "GPL-3.0"
version = "0.1.0"

[workspace.dependencies]
namada_tx_prelude = { git = "https://github.com/anoma/namada", rev = "66089c46ddd2b765c19e4d162b9d3043d67ad516" }
namada_proof_of_stake = { git = "https://github.com/anoma/namada", rev = "66089c46ddd2b765c19e4d162b9d3043d67ad516" }
namada_ibc = { git = "https://github.com/anoma/namada", rev = "66089c46ddd2b765c19e4d162b9d3043d67ad516" }
rlsf = "0.2.1"
getrandom = { version = "0.2", features = ["custom"] }
lazy_static = "1.4.0"

[profile.release]
lto = true
panic = "abort"
opt-level = 'z'
strip = "debuginfo"
